<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:elevation="5dp">

            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@android:color/darker_gray"
                app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                app:boxCollapsedPaddingTop="@dimen/_15sdp"
                app:boxCornerRadiusTopStart="@dimen/_15sdp"
                app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                app:hintTextColor="@color/black"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                android:hint="@string/name"
                android:textColorHint="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_heading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="5dp"
                android:layout_marginTop="@dimen/_50sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@android:color/darker_gray"
                app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                app:boxCollapsedPaddingTop="@dimen/_15sdp"
                app:boxCornerRadiusTopStart="@dimen/_15sdp"
                app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                app:hintTextColor="@color/black"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                app:layout_constraintTop_toBottomOf="@id/et_name_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="5dp"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@android:color/darker_gray"
                app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                app:boxCollapsedPaddingTop="@dimen/_15sdp"
                app:boxCornerRadiusTopStart="@dimen/_15sdp"
                app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                app:hintTextColor="@color/black"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                app:layout_constraintTop_toBottomOf="@id/et_email_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="5dp"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                app:cornerRadius="10dp"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_50sdp"
                app:layout_constraintTop_toBottomOf="@id/et_password_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>