<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginFragment"
        android:padding="25dp"
        android:elevation="5dp"
        android:background="@color/white"
        >
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/voice_digital_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/_65sdp"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="@color/ligth_blue">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:paddingVertical="@dimen/_30sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@android:color/white"
                    app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                    app:boxCollapsedPaddingTop="@dimen/_15sdp"
                    app:boxCornerRadiusTopStart="@dimen/_15sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                    app:hintTextColor="@color/white"
                    app:boxStrokeErrorColor="@android:color/holo_red_dark"
                    android:hint="@string/email"
                    android:textColorHint="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:elevation="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:inputType="textEmailAddress"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeErrorColor="@android:color/holo_red_dark"
                    android:hint="@string/password"
                    app:boxStrokeColor="@android:color/white"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/white"
                    android:elevation="5dp"
                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"
                    app:boxCornerRadiusBottomEnd="@dimen/_15sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_15sdp"
                    app:boxCollapsedPaddingTop="@dimen/_15sdp"
                    app:boxCornerRadiusTopStart="@dimen/_15sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_15sdp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_email_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:inputType="textPassword"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tv_new_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New user? Sign up"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@id/et_password_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:text="Forgot?"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/card_view"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            app:layout_constraintVertical_bias="0.20"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingHorizontal="20dp"
            app:cornerRadius="10dp"
            app:layout_constraintTop_toTopOf="@id/btn_forgot_password"
            app:layout_constraintEnd_toEndOf="@id/card_view"
            app:layout_constraintStart_toEndOf="@id/btn_forgot_password"
            app:layout_constraintBottom_toBottomOf="@id/btn_forgot_password"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>